--- a/WebGL Builds/index.html
+++ b/WebGL Builds/index.html
@@ -62,7 +62,7 @@
         frameworkUrl: buildUrl + "/WebGL Builds.framework.js.br",
         codeUrl: buildUrl + "/WebGL Builds.wasm.br",
         streamingAssetsUrl: "StreamingAssets",
-        companyName: "DefaultCompany",
+        companyName: "TK",
         productName: "Katana Rush",
         productVersion: "1.0",
         showBanner: unityShowBanner,
